--- a/locaciones.html
+++ b/locaciones.html
@@ -20,8 +20,8 @@
             <header>
                 <div>
                         <h1>Bernardita Hurtado</h1>
-                        <p>Comenzamos siendo dos socias, la Sarita y yo, pero ahora soy solo yo.</p>
                         <p>Siempre me han encantado la costura y la confección, Zatino empezó como un hobbie, pero ahora es mi negocio.</p>
+                        <p>Trabjo día y noche diseñando, haciendo moldes y cosiendo para que, con la ayuda de varias costureras, mis ideas se hagan realidad.</p>
                 </div>
             </header>
             <footer>
