--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header>
                 <div>
                         <h1>Zatino</h1>
-                        <p>En Zatino ofrecemos ropa hecha 100% a mano en Chile.</p>
+                        <p>En Zatino ofrecemos ropa hecha 100% a mano en Chile</p>
                 </div>
             </header>
             <footer>
